# pixy

src/host/pow-pixy/: CMakeLists.txt  pow-pixy-connected.cpp  pow-pixy.cpp
src/host/pow_pixy/: CMakeLists.txt
src/host/pow_pixy/cmake/: Findlibpixyusb.cmake
